tests/jtrrouter/errors/default_departspeed_false/errors.jtrrouter
Error: Invalid departSpeed definition for option 'departspeed';
 must be one of ("random", "max", or a float>=0)
Quitting (on error).
